# internet-identity

./: Cargo.toml  canister_ids.json  dfx.json  internet_identity.wasm  internet_identity_production.wasm  package-lock.json  package.json
.github/actions/file-size/: README.md  action.yml  run.sh  test.sh
.github/workflows/: canister-tests.yml
backend-tests/: README.md  backend-tests.hs
demos/using-dev-build/: package-lock.json  package.json
scripts/: testnet-medium09-install  testnet-medium09-reinstall
src/canister_tests/: Cargo.toml  README.md
src/canister_tests/src/: main.rs
src/frontend/src/flows/recovery/: chooseRecoveryMechanism.ts
src/frontend/src/test-e2e/: selenium.test.ts  views.ts
src/internet_identity/: internet_identity.did
src/internet_identity/src/: main.rs
